Add privacy page

--- a/gccsite/gcc/static/gcc/css/gcc.css
+++ b/gccsite/gcc/static/gcc/css/gcc.css
@@ -1294,3 +1294,12 @@ table.table-align-middle > tbody > tr > td {
 .highlight-horizontal a {
     height: 100%;
 }
+
+.application_form p {
+    margin: 10px;
+    color: gray;
+}
+
+.privacy p {
+    margin: 10px;
+}
