--- a/gccsite/gcc/templates/gcc/main-footer.html
+++ b/gccsite/gcc/templates/gcc/main-footer.html
@@ -9,6 +9,7 @@
         <li><a href="{% url 'gcc:index' %}">{% trans 'Home' %}</a></li>
         <li class="{% active '^/gcc/resources/' %}"><a href="{% url 'gcc:resources' %}">{% trans 'Ressources' %}</a></li>
         <li class="{% active '^/gcc/editions/' %}"><a href="{% url 'gcc:editions' %}">{% trans 'Past editions' %}</a></li>
+        <li class="{% active '^/gcc/privacy/' %}"><a href="{% url 'gcc:privacy' %}">{% trans 'Privacy' %}</a></li>
     </ul>
 
   </div>
