--- a/gccsite/gcc/templates/gcc/application/wishes.html
+++ b/gccsite/gcc/templates/gcc/application/wishes.html
@@ -27,12 +27,12 @@
       <div class="col-md-6">
         <a href="//prologin.org/center"><h3>{{ event.center.name }}</h3></a>
         <p>
-          {% blocktrans with start=event.event_start end=event.event_end %}
+          {% blocktrans with start=event.event_start|date:"DATE_FORMAT" end=event.event_end|date:"DATE_FORMAT" %}
             From {{start}} to {{end}}
           {% endblocktrans %}
           <br />
           {{event.center.address}}, {{event.center.postal_code}} {{event.center.city}}<br />
-          {% blocktrans with signup_end=event.signup_end %}Inscription close the {{signup_end}} {% endblocktrans %}
+          {% blocktrans with signup_end=event.signup_end|date:"DATE_FORMAT" %}Inscription close the {{signup_end}} {% endblocktrans %}
         </p>
       </div>
     {% endfor %}
