--- a/gccsite/gcc/static/gcc/css/gcc.css
+++ b/gccsite/gcc/static/gcc/css/gcc.css
@@ -1307,3 +1307,26 @@ table.table-align-middle > tbody > tr > td {
 .privacy h4 {
     font-size: 1.5em;
 }
+
+/*
+ * Helpers
+ */
+.first-name {
+    text-transform: capitalize;
+}
+
+.last-name {
+    text-transform: uppercase;
+}
+
+/* usefull for placing a label in a table */
+.label-xs {
+    padding: 1px 5px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+}
+
+.label > a {
+    color: inherit;
+}
