--- a/gccsite/gcc/static/gcc/css/gcc.css
+++ b/gccsite/gcc/static/gcc/css/gcc.css
@@ -1330,3 +1330,26 @@ table.table-align-middle > tbody > tr > td {
 .label > a {
     color: inherit;
 }
+
+/**
+ * Add colored badges
+ */
+.badge.badge-primary {
+    background-color: var(--primary) !important;
+}
+
+.badge.badge-success {
+    background-color: #5cb85c !important;
+}
+
+.badge.badge-info {
+    background-color: #5bc0de !important;
+}
+
+.badge.badge-warning {
+    background-color: #f0ad4e !important;
+}
+
+.badge.badge-danger {
+    background-color: #d9534f !important;
+}
