application/review: add feedback on which wish is for reviewed event

--- a/gccsite/gcc/static/gcc/css/gcc.css
+++ b/gccsite/gcc/static/gcc/css/gcc.css
@@ -1331,6 +1331,11 @@ table.table-align-middle > tbody > tr > td {
     color: inherit;
 }
 
+.list-group > .list-group-item.highlighted {
+    border-left: 5px solid var(--primary-light);
+    padding-left: 10px;  /* 5px less than default */
+}
+
 /**
  * Add colored badges
  */
