fix templates based on prologin/base.html

--- a/gccsite/centers/templates/centers/map.html
+++ b/gccsite/centers/templates/centers/map.html
@@ -1,4 +1,4 @@
-{% extends "prologin/base.html" %}
+{% extends "gcc/base.html" %}
 {% load i18n l10n staticfiles %}
 {% load django_bootstrap_breadcrumbs %}
 
