--- a/gccsite/users/templates/users/delete-confirm.html
+++ b/gccsite/users/templates/users/delete-confirm.html
@@ -1,4 +1,4 @@
-{% extends "prologin/base.html" %}
+{% extends "gcc/base.html" %}
 {% load i18n staticfiles %}
 {% load django_bootstrap_breadcrumbs crispy_forms_tags %}
 
