--- a/gccsite/gcc/templates/gcc/editions.html
+++ b/gccsite/gcc/templates/gcc/editions.html
@@ -21,9 +21,11 @@
         Subscriptions are still open for this edition.
         {% endblocktrans %}
       </p>
-      <a class="btn btn-primary btn-lg" href="/application/form/2019">
-        {% trans 'Candidate for a summer camp' %}
-      </a>
+      {% if user.is_authenticated %}
+        <a href="/application/form/2019" class="btn btn-primary btn-lg">{% trans 'Register' %}</a>
+      {% else %}
+        <a href="{% url 'oauth:autologin' %}" class="btn btn-primary btn-lg">{% trans 'Sign in' %}</a>
+      {% endif %}
     </div>
   </div>
   <div class="row">
