--- a/gccsite/gcc/templates/gcc/application/validation.html
+++ b/gccsite/gcc/templates/gcc/application/validation.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-  {% if user.has_complete_profile_for_application is not True %}
+  {% if not applicant.has_complete_application %}
   <div class="alert alert-warning" role="alert">
     {% trans "You are missing some key information, you won't be able to validate your application !" %}
   </div>
