application/review: add a little helper on keyboard shortchuts

--- a/gccsite/gcc/templates/gcc/application/review.html
+++ b/gccsite/gcc/templates/gcc/application/review.html
@@ -13,6 +13,9 @@
       Candidates for {{ event }} (edition {{ edition }})
     {% endblocktrans %}
   </h3>
+  <p>
+    <small>{% trans '↓↑ to browse among applicants, <escape> to close all expanded applications.' %}</small>
+  </p>
 
   <div class="table-responsive">
     <table class="table table-hover">
