fix a few typos

--- a/gccsite/gcc/templates/gcc/application/review.html
+++ b/gccsite/gcc/templates/gcc/application/review.html
@@ -14,7 +14,9 @@
     {% endblocktrans %}
   </h3>
   <p>
-    <small>{% trans '↓↑ to browse among applicants, <escape> to close all expanded applications.' %}</small>
+    <small>{% blocktrans %}
+      ↓↑ to browse among applicants, &lt;escape&gt; to close all expanded applications.
+    {% endblocktrans %}</small>
   </p>
 
   <div class="table-responsive">
