application/review: add buttons to accept/rejects wishes

--- a/gccsite/gcc/static/gcc/css/application.css
+++ b/gccsite/gcc/static/gcc/css/application.css
@@ -21,3 +21,13 @@
     color: white;
 }
 
+.wish-actions {
+    position: absolute;
+    top: 3em;
+    right: 15px;
+    font-size: 12px;
+}
+
+.update-wish {
+    cursor: pointer;
+}
