--- a/gccsite/gcc/templates/gcc/application/review.html
+++ b/gccsite/gcc/templates/gcc/application/review.html
@@ -1,6 +1,6 @@
 {% extends "gcc/base.html" %}
 {% load static %}
-{% load i18n %}
+{% load i18n rules %}
 
 {% block title %}{% trans "Applications" %}{% endblock %}
 {% block extra_head %}
@@ -50,7 +50,7 @@
               <span class="remove-label label label-default label-xs" for-applicant="{{applicant.pk}}" for-label="{{label.pk}}" for-event="{{event.pk}}" {% if label not in applicant.labels.all %}style="display: none;"{% endif %}>{{label}}</span>
             {% endfor %}
           </td>
-          <td>{{ applicant.get_status_display }}</td>
+          <td class="applicant-status">{{ applicant.get_status_display }}</td>
         </tr>
         <tr style="display: none">
           <td colspan="4">
@@ -71,8 +71,24 @@
               <div class="col-md-6">
                 <ul class="list-group">
                   {% for wish in applicant.eventwish_set.all %}
-                  <li class="list-group-item {% if wish.event == event %} highlighted {% endif %}">
-                      <span class="badge {% if wish.status == 0 %} badge-warning {% elif wish.status == 1 %} badge-default {% elif wish.status == 2 %} badge-danger {% else %} badge-success {% endif %}">{{wish.get_status_display}}</span>
+                  <li id="wish-{{wish.pk}}" class="list-group-item {% if wish.event == event %} highlighted {% endif %}">
+                      {% comment %} Status badges {% endcomment %}
+                      <span status="0" class="badge badge-warning" {% if wish.status != 0 %}style="display: none;"{% endif %}>{% trans 'incomplete' %}</span>
+                      <span status="1" class="badge badge-default" {% if wish.status != 1 %}style="display: none;"{% endif %}>{% trans 'pending' %}</span>
+                      <span status="2" class="badge badge-danger" {% if wish.status != 2 %}style="display: none;"{% endif %}>{% trans 'rejected' %}</span>
+                      <span status="3" class="badge badge-success" {% if wish.status != 3 %}style="display: none;"{% endif %}>{% trans 'selected' %}</span>
+                      <span status="4" class="badge badge-warning" {% if wish.status != 4 %}style="display: none;"{% endif %}>{% trans 'accepted' %}</span>
+                      <span status="5" class="badge badge-success" {% if wish.status != 5 %}style="display: none;"{% endif %}>{% trans 'confirmed' %}</span>
+
+                      {% has_perm 'gcc:can_accept_wish' request.user wish as can_accept %}
+                      {% if can_accept %}
+                        <span class="wish-actions">
+                          <span class="update-wish" new-status="3" for-wish="{{wish.pk}}" {% if wish.status != 1 %}style="display: none;"{% endif %}>{% trans 'select' %}</span>
+                          <span class="update-wish" new-status="2" for-wish="{{wish.pk}}" {% if wish.status != 1 %}style="display: none;"{% endif %}>{% trans 'reject' %}</span>
+                          <span class="update-wish" new-status="1" for-wish="{{wish.pk}}" {% if wish.status != 2 and wish.status != 3 %}style="display: none;"{% endif %}>{% trans 'cancel' %}</span>
+                        </span>
+                      {% endif %}
+
                       <h4 class="list-group-item-heading">{{wish.order}}. {{wish.event.center}}</h4>
                       <p class="list-group-item-text">{{wish.event.event_start}}</p>
                     </li>
