add a learn more page

--- a/gccsite/gcc/templates/gcc/index.html
+++ b/gccsite/gcc/templates/gcc/index.html
@@ -24,6 +24,16 @@
         {% include "gcc/index/projects.html" %}
       </div>
     </div>
+
+    <br/>
+
+    <div class="row">
+      <div class="col-lg-6 col-lg-offset-3">
+      <a href="{% url 'gcc:learn_more' %}" class="btn btn-default btn-lg btn-block">
+        {% trans 'Learn More'%}
+      </a>
+      </div>
+    </div>
   </div>
 </section>
 
