--- a/gccsite/gcc/templates/gcc/learn_more.html
+++ b/gccsite/gcc/templates/gcc/learn_more.html
@@ -6,14 +6,14 @@
 {% block title %}{% trans 'Main Informations' %}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container col-md-8 col-md-offset-2">
   <h3>{% trans 'Content of the summer camps' %}</h3>
   <p>
-    {% blocktrans %}The summer camps last for one week and manly consist of practical exercises.
-    The week starts with an initiation to the Python programming language, and the some
-    introductive tutorials on several domains of informatics like network or web design. Finally,
-    the week ends with the creation of a personal project, that can be chosen among several main
-    topics: video game, robotics or microcontroller.{% endblocktrans %}
+    {% blocktrans %}The summer camps lasts for one week and mainly consist of practical exercises.
+    The week starts with an initiation to the Python programming language, and then some
+    introductive tutorials about several subdomains of informatics like network or web design.
+    Finally, the week ends with a personal project, that can be chosen among several main topics:
+    video game, robotics or microcontroller.{% endblocktrans %}
   </p>
 
   <h3>{% trans 'The schedule' %}</h3>
@@ -28,14 +28,14 @@
   <h3>{% trans 'Academic level' %}</h3>
   <p>
     {% blocktrans %}We accept girls attending to secondary school are higher, the difficulty of the
-    internship aims at adapting to the knowledge of participant.{% endblocktrans %}
+    internship aims at adapting to the knowledge of all participants.{% endblocktrans %}
   </p>
 
   <h3>{% trans 'Grants' %}</h3>
   <p>
-    {% blocktrans %}The Prologin can attribute grants for some of the participants. Specifically,
-    Prologin can pay back the costs of the transport and housing for participants who need to keep
-    the receipts.{% endblocktrans %}
+    {% blocktrans %}Prologin can attribute grants for some of the participants. Specifically,
+    Prologin can pay back the costs of the transport and housing for participants, thus they need
+    to keep their receipts.{% endblocktrans %}
   </p>
 
   {% blocktrans %}To candidate for a grant you need to send an email to bourse2019@prologin.org and
