--- a/gccsite/gcc/templates/gcc/editions.html
+++ b/gccsite/gcc/templates/gcc/editions.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans 'Past Editions' %}{% endblock %}
 
 {% block extra_head %}
-<link rel="stylesheet" href="{% static 'gcc/css/editions.css' %}" >
+<link rel="stylesheet" href="{% static 'gcc/css/editions.css' %}" />
 {% endblock %}
 
 {% block content %}
