--- a/gccsite/gcc/templates/gcc/index.html
+++ b/gccsite/gcc/templates/gcc/index.html
@@ -28,10 +28,10 @@
     <br/>
 
     <div class="row">
-      <div class="col-lg-6 col-lg-offset-3">
-      <a href="{% url 'gcc:learn_more' %}" class="btn btn-default btn-lg btn-block">
-        {% trans 'Learn More'%}
-      </a>
+      <div class="col-lg-4 col-lg-offset-4">
+        <a href="{% url 'gcc:learn_more' %}" class="btn btn-primary btn-lg btn-block">
+          {% trans 'Learn More'%}
+        </a>
       </div>
     </div>
   </div>
