--- a/gccsite/gcc/templates/gcc/index.html
+++ b/gccsite/gcc/templates/gcc/index.html
@@ -45,29 +45,8 @@
 
       <div class="row">
       <div class="col-sm-3">
-
-          <section class="up-comming">
-          <h2>{% trans "Up-comming summer camps" %}</h2>
-          <table class="table">
-            <tbody>
-              {% for event in events %}
-              <tr>
-                <td>
-                  <strong>{{ event.center }}</strong>, {% trans 'the week of' %} <em>{{ event.event_start|date:"DATE_FORMAT" }}</em>
-                </td>
-              </tr>
-            {% endfor %}
-            </tbody>
-          </table>
-        <p>
-        {% if user.is_authenticated %}
-            <a href="application/form/{{last_edition}}" class="btn btn-primary btn-lg btn-block">{% trans 'Register' %}</a>
-        {% else %}
-            <a href="{% url 'oauth:autologin' %}" class="btn btn-primary btn-lg btn-block">{% trans 'Sign in' %}</a>
-        {% endif %}
-        </p>
-        </section>
-
+        {% include 'gcc/registration_widget.html' %}
+        <section>
           <h2>{% trans "Sponsors" %}</h2>
           <div class="row">
             {% for sponsor in sponsors %}
@@ -82,6 +61,7 @@
             </div>
             {% endfor %}
           </div>
+        </section>
       </div>
 
       <div class="col-sm-9">
