--- a/gccsite/gcc/templates/gcc/learn_more.html
+++ b/gccsite/gcc/templates/gcc/learn_more.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="container col-md-9">
-  <h2>{% trans 'Content of the summer camps' %}</h2>
+  <h2>{% trans 'Content of the Summer Camps' %}</h2>
   <p>
     {% blocktrans %}The summer camps lasts for one week and mainly consist of practical exercises.
     The week starts with an initiation to the Python programming language, and then some
@@ -20,7 +20,7 @@
     video game, robotics or microcontroller.{% endblocktrans %}
   </p>
 
-  <h2>{% trans 'The schedule' %}</h2>
+  <h2>{% trans 'The Schedule' %}</h2>
   <p>
     {% blocktrans %}Here is a typical schedule of a GCC! week. Notice that the attendees can arrive
     between 9 am and 9:30 am and can leave at between 18 pm and 19 am.{% endblocktrans %}
@@ -29,7 +29,7 @@
     <img alt="Typical Schedule of a GCC! Week" src="{% static 'gcc/img/schedule.svg' %}" />
   </a>
 
-  <h2>{% trans 'Academic level' %}</h2>
+  <h2>{% trans 'Academic Level' %}</h2>
   <p>
     {% blocktrans %}We accept girls attending to secondary school are higher, the difficulty of the
     internship aims at adapting to the knowledge of all participants.{% endblocktrans %}
